fix: made website better looking on small screens
window header always connected to the body and full size + media query to hide the folder icon on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,11 @@ body {
     width: 100%;
     height: 50px;
     background-image: url("/images/pom2_window.png");
-    background-position: top center; 
+    background-position: top center;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 100% 100%; 
     flex-shrink: 0;
-    margin-bottom: -4px; 
+    margin-bottom: -4px;
     z-index: 1;
 }
 
@@ -173,4 +173,10 @@ hr {
     width: 100% !important;
     min-height: 300px !important; 
     border: none !important;
+}
+
+@media (max-width: 1100px) {
+    .folder {
+        display: none; 
+    }
 }
